# mainline_arch

./: .SRCINFO  .gitignore  PKGBUILD  README.md  meson.build  org.bkw777.mainline.json  org.bkw777.mainline.json~  resultado.txt  write_meson.py
data/: mainline.desktop.in  meson.build
pkg/mainline-arch/: .BUILDINFO  .MTREE  .PKGINFO
pkg/mainline-arch-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/mainline-arch/usr/share/applications/: mainline.desktop
pkg/mainline-arch/usr/share/locale/de/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/el/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/es/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/fr/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/hr/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/hu/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/it/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/ko/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/nl/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/pl/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/ru/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/sv/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/tr/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/uk/LC_MESSAGES/: mainline.mo
pkg/mainline-arch/usr/share/locale/zh/LC_MESSAGES/: mainline.mo
po/: LINGUAS  de.po  de.po~  el.po  el.po~  es.po  es.po~  fr.po  fr.po~  hr.po  hu.po  hu.po~  it.po  ko.po  mainline.pot  meson.build  messages.pot  nl.po  pl.po  pt_BR.mo  pt_BR.po  pt_BR.po~  ru.po  sv.po  sv.po~  tr.po  uk.po  uk.po~  zh.po
src/: meson.build
src/Common/: DownloadManager.vala  LinuxKernel.vala  Main.vala  Package.vala
src/Console/: AppConsole.vala
src/Gtk/: AppGtk.vala  MainWindow.vala  SettingsWindow.vala  TerminalWindow.vala
src/lib/: l_exec.vala  l_misc.vala
src/mainline_arch-1.5.1/: meson.build  write_meson.py
src/mainline_arch-1.5.1/data/: meson.build
src/mainline_arch-1.5.1/po/: de.po  el.po  fr.po  hr.po  hr.po~  hu.po  it.po  ko.po  pl.po  pt_BR.mo  pt_BR.po  ru.po  ru.po~  sv.po  tr.po~  uk.po  zh.po~
src/mainline_arch-1.5.1/src/: meson.build
src/mainline_arch-1.5.1/src/Common/: DownloadManager.vala  LinuxKernel.vala  Main.vala
src/mainline_arch-1.5.1/src/Console/: AppConsole.vala
src/mainline_arch-1.5.1/src/Gtk/: MainWindow.vala
src/mainline_arch-1.5.1/src/lib/: AsyncTask.vala  l_json.vala
src/mainline_arch-1.6.0/: README.md  settings.md
src/mainline_arch-1.6.0/data/: meson.build
src/mainline_arch-1.6.0/po/: POTFILES.in  es.po  it.po~  ko.po~  nl.po  nl.po~  pl.po~  tr.po  zh.po
src/mainline_arch-1.6.0/src/: meson.build
src/mainline_arch-1.6.0/src/Common/: DownloadManager.vala  LinuxKernel.vala  Main.vala  Package.vala
src/mainline_arch-1.6.0/src/Console/: AppConsole.vala
src/mainline_arch-1.6.0/src/Gtk/: TerminalWindow.vala
src/mainline_arch-1.6.0/src/lib/: l_misc.vala
