install_data('mainline.desktop.in',
  install_dir: get_option('datadir') / 'applications',
  rename: 'mainline.desktop'
)

# Install icons
install_data('main_window.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('sort_by_locked.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('sort_by_notes.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('sort_by_status.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('tux-red.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('tux.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
install_data('arch-logo.png', install_dir: get_option('datadir') / 'pixmaps/mainline')
